--- a/style.css
+++ b/style.css
@@ -81,11 +81,32 @@
     font-weight: 700;
 }
 .card{
-    padding-left: 10px;
-    padding-right: 10px;
+    margin-bottom: 50px;
+}
+.card-content{
+    padding-left: 15px;
+    padding-right: 15px;
+    box-shadow: lightblue;
+    flex: 1 1 auto;
+    min-height: 1px;
+    padding: 1.25rem;
 }
 .shake{
-   border: red solid 3px;
+   border: lightblue solid 3px;
    border-radius: 50%;
-   
+   margin: 50px auto;
+}
+.Ashake{
+    margin-bottom: 20px;
+}
+.pshake{
+    margin-bottom: 60px;
+}
+.btn1{
+    margin: 10px auto;
+  padding: 6px 12px;
+  border-radius: 3px;
+}
+.card-footer{
+    padding: 15px;
 }
