--- a/style.css
+++ b/style.css
@@ -136,6 +136,11 @@
     width: 550px;
     border-radius: 10px;
 }
+.acceshp{
+    word-spacing:  2px;
+    letter-spacing: 2px;
+    padding-right: 40px;
+}
 
 /*----------------Companys--------------------*/
 .company{
@@ -162,4 +167,113 @@
 .footer{
     background-color: lightblue;
     padding: 20px 0;
+}
+
+
+
+
+
+
+/*=========================== About page==================================  */
+/*=========================== About page==================================  */
+/*=========================== About page==================================  */
+/*=========================== About page==================================  */
+/*=========================== About page==================================  */
+
+
+#about-header{
+    width: 100%;
+    height: 70vh;
+    border-left: none;
+    border-right: none;
+    position: relative;
+    padding: 20px;
+}
+.video-container-about{
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    height: 70vh;
+    width: 100%;
+    overflow: hidden;
+}
+
+#myVideo-about {
+    position: absolute;
+    z-index: -1;
+    opacity: 0.78;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+  }
+
+.hero{
+    z-index: 1;
+}
+.headh-abt{
+    margin-top: 60px !important;
+    margin-bottom: 20px;
+    font-size: 50px;
+    font-weight: 600;
+}
+.headp{
+    margin-bottom: 30px;
+}
+.btn{
+  border-radius: 30px;
+  padding: 10px 40px;
+}
+/*-----------Our mission------------------*/
+.mission-abt{
+    margin-top: 90px;
+    margin-bottom: 70px;
+}
+.ourh{
+    font-size: 50px;
+    font-weight: 700;
+    font-style: oblique;
+}
+.ourp{
+    font-size: 18px;
+    word-spacing:  2px;
+    letter-spacing: 2px;
+}
+
+
+/*----------------------our team--------------------------*/
+.Team{
+    font-size: 50px;
+    font-weight: 700;
+    font-style: oblique;
+}
+.teamh4{
+    font-size: 25px;
+    font-weight: 700;
+    color: blue;
+    margin-bottom: 30px;
+}
+.teamp{
+    word-spacing:  2px;
+    letter-spacing: 2px;
+    line-height: 30px;
+}
+.tedh{
+    font-size: 22px;
+    font-weight: 700;
+    margin-top: 20px;
+}
+.teamdid{
+    margin-bottom: 50px;
+}
+.teamtop{
+    margin: 70px 0;
+}
+.teamp{
+    word-spacing:  2px;
+    letter-spacing: 2px;
+    margin-bottom: 10px;
+}
+.bii{
+    margin: 0 10px;
 }
