--- a/style.css
+++ b/style.css
@@ -611,3 +611,15 @@ Non-profits */
 .setsp{
     padding-bottom: 60px;
 }
+
+.cc{
+    border-radius: 10px;
+}
+.partp{
+    letter-spacing: 2px;
+    word-spacing: 2px;
+}
+.parth{
+    letter-spacing: 2px;
+    word-spacing: 2px;
+}
